@@ -1,3 +1,7 @@
+2012-09-21  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/help/ja/help_macros.php: Added a new help file.
+
 2012-09-20 Miguel de Dios <miguel.dedios@artica.es>
 
 	* include/javascript/pandora.js, include/functions_api.php: cleaned
